# libfq

./: .gitignore  CHANGELOG  INSTALL  INSTALL.md  Makefile.am  Makefile.in  README.md  README.txt  aclocal.m4  configure  configure.ac  libtool
doc/: .gitignore  Makefile  appendix-release-notes.sgml  background.sgml  data-types.sgml  filelist.sgml  function-template.sgml  functions.sgml  installation.sgml  libfq.sgml  overview.sgml
include/: Makefile.am  c.h  config.h.in  fqexpbuffer.h  libfq-expbuffer.h  libfq-int.h  libfq-timezones.h  libfq-version.h  libfq.h
lib/: Makefile  Makefile.in  fqexpbuffer.c  libfq.c
lib/.deps/: fqexpbuffer.Plo  libfq.Plo
packaging/: Makefile  libfq.spec
packaging/opensuse/: libfq.spec
packaging/redhat/: libfq.spec
src/: Makefile.in  fqexpbuffer.c  fqmultibyte.c  libfq.c  libfq.spec
